--- a/EasyFood/app/src/main/AndroidManifest.xml
+++ b/EasyFood/app/src/main/AndroidManifest.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.easyfood.easyfood">
 
     <application
-        android:name=".Aplicacion.EasyFoodApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/theme_title"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".ProductosActivity"
-            android:label="@string/productos_title"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
         </activity>
     </application>
 
